--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#welcome">ANNA HAYES</a>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light container-fluid">
+            <a class="navbar-brand ml-4" href="#welcome">ANNA HAYES</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" style="color: white;"></span>
+                <img src="./img/menu.svg" alt="Menu" class="navbar-toggler-icon">
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto d-md-none">
@@ -195,7 +195,8 @@
     </main>
 
     <footer class="container-fluid">
-        <!-- <img src="" alt="Footer Logo" class="footer-logo"> -->
+        <img src="./img/Guitar/Group 18.svg" alt="Guitar Line" class="guitar-line d-none d-md-flex">
+        <img src="./img/Guitar/Vector.svg" alt="Guitar" class="guitar d-none d-md-flex">
         <h1 class="footer-header">ANNA HAYES</h1>
         <div class="footer-details d-flex flex-column flex-md-row justify-content-center mt-5">
             <a href="#" class="footer-details__phone-number mr-md-5"><img src="./img/phone.svg" alt="Phone"
@@ -214,9 +215,9 @@
     </footer>
 
 
-    <script src="/js/jquery.js"></script>
-    <script src="/js/bootstrap.js"></script>
-    <script src="/js/popper.js"></script>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/bootstrap.js"></script>
+    <script src="./js/popper.js"></script>
 </body>
 
 </html>
