--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="./img/menu.svg" alt="Menu" class="navbar-toggler-icon">
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto d-md-none">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="#welcome">Home</a>
                     </li>
