--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <header>
-        <nav class="navbar fixed-top navbar-light bg-light container-fluid">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light container-fluid">
             <a class="navbar-brand ml-4" href="#welcome">ANNA HAYES</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,22 +23,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#welcome">Home</a>
+                        <a class="nav-link mr-3" href="#welcome">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about-me">About</a>
+                        <a class="nav-link mr-3" href="#about-me">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#my-works">Works</a>
+                        <a class="nav-link mr-3" href="#my-works">Works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#upcoming-shows">Upcoming Shows</a>
+                        <a class="nav-link mr-3" href="#upcoming-shows">Upcoming Shows</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#titles">Skills</a>
+                        <a class="nav-link mr-3" href="#titles">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#get-in-touch">Contact</a>
+                        <a class="nav-link mr-5" href="#get-in-touch">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -92,15 +92,60 @@
                 <div class="container">
                     <div
                         class="my-works__gallery d-flex flex-column flex-wrap flex-md-row align-items-center justify-content-md-between mt-5">
-                        <a href="#"><img src="./img/g-works-1.svg" alt="My Works" class="img-fluid mt-0 mt-md-5"></a>
-                        <a href="#"><img src="./img/g-works-4.svg" alt="My Works" class="img-fluid mt-5"></a>
-                        <a href="#"><img src="./img/g-works-3.svg" alt="My Works" class="img-fluid mt-5"></a>
-                        <a href="#"><img src="./img/g-works-4.svg" alt="My Works"
-                                class="img-fluid mt-5 d-none d-md-flex"></a>
-                        <a href="#"><img src="./img/g-works-5.svg" alt="My Works"
-                                class="img-fluid mt-5 d-none d-md-flex"></a>
-                        <a href="#"><img src="./img/g-works-6.svg" alt="My Works"
-                                class="img-fluid mt-5 d-none d-md-flex"></a>
+                        <a href="##" class="mt-0 mt-md-5">
+                            <img src="./img/g-works-1.svg" alt="My Works" class="img-fluid">
+                            <div class="my-works__overlay">
+                                <h4 class="my-works__title mb-5 pr-5 text-right">THE TRAVELLER</h4>
+                                <p class="my-works__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Tenetur at cumque unde similique! Sequi, velit.</p>
+                            </div>
+                        </a>
+                        <a href="##" class="mt-5">
+                            <img src="./img/g-works-4.svg" alt="My Works" class="img-fluid">
+                            <div class="my-works__overlay">
+                                <h4 class="my-works__title mb-5 pr-5 text-right">THE TRAVELLER</h4>
+                                <p class="my-works__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Tenetur at cumque unde similique! Sequi, velit.</p>
+                            </div>
+                        </a>
+                        <a href="##" class="mt-5">
+                            <img src="./img/g-works-3.svg" alt="My Works" class="img-fluid">
+                            <div class="my-works__overlay">
+                                <h4 class="my-works__title mb-5 pr-5 text-right">THE TRAVELLER</h4>
+                                <p class="my-works__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Tenetur at cumque unde similique! Sequi, velit.</p>
+                            </div>
+                        </a>
+                        <a href="##" class="mt-5 d-none d-md-flex">
+                            <img src="./img/g-works-4.svg" alt="My Works" class="img-fluid">
+                            <div class="my-works__overlay">
+                                <h4 class="my-works__title mb-5 pr-5 text-right">THE TRAVELLER</h4>
+                                <p class="my-works__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Tenetur at cumque unde similique! Sequi, velit.</p>
+                            </div>
+                        </a>
+                        <a href="##" class="mt-5 d-none d-md-flex">
+                            <img src="./img/g-works-5.svg" alt="My Works" class="img-fluid">
+                            <div class="my-works__overlay">
+                                <h4 class="my-works__title mb-5 pr-5 text-right">THE TRAVELLER</h4>
+                                <p class="my-works__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Tenetur at cumque unde similique! Sequi, velit.</p>
+                            </div>
+                        </a>
+                        <a href="##" class="mt-5 d-none d-md-flex">
+                            <img src="./img/g-works-6.svg" alt="My Works" class="img-fluid">
+                            <div class="my-works__overlay">
+                                <h4 class="my-works__title mb-5 pr-5 text-right">THE TRAVELLER</h4>
+                                <p class="my-works__text text-center">Lorem ipsum dolor sit amet consectetur adipisicing
+                                    elit.
+                                    Tenetur at cumque unde similique! Sequi, velit.</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="link d-flex justify-content-center mt-5 d-md-none">
                         <a href="#" class="my-works__see-more">SEE MORE +</a>
