--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         </section>
 
         <section id="about-me" class="d-flex flex-column align-items-center justify-content-center">
-            <div class="about-me container py-5">
-                <h1 class="about-me__header-text">ABOUT ME</h1>
+            <div class="about-me container py-5 mb-md-4">
+                <h1 class="about-me__header-text mb-md-5">ABOUT ME</h1>
                 <div class="about-me__content">
                     <img src="./img/about-me.svg" alt="About Me Image" class="about-me__img mt-4 img-fluid">
                     <div class="about-me__summary">
@@ -160,7 +160,7 @@
         <section id="upcoming-shows">
             <div class="py-5">
                 <div class="upcoming d-flex flex-column">
-                    <h1 class="upcoming__header-text">UPCOMING SHOWS</h1>
+                    <h1 class="upcoming__header-text mb-md-5">UPCOMING SHOWS</h1>
                 </div>
                 <div class="upcoming-shows container d-flex flex-column align-items-md-center pb-5">
                     <div class="upcoming-show mt-3 d-flex justify-content-between align-items-center">
@@ -239,7 +239,7 @@
         </section>
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid py-5">
         <img src="./img/Guitar/Group 18.svg" alt="Guitar Line" class="guitar-line d-none d-md-flex">
         <img src="./img/Guitar/Vector.svg" alt="Guitar" class="guitar d-none d-md-flex">
         <h1 class="footer-header mt-5">ANNA HAYES</h1>
